crates/explain/src/codes/snapshots/mix_explain__codes__tests__CLEANUP_INCOMPLETE.snap
---
source: crates/explain/src/codes/tests.rs
expression: shown(code)
---
$ mix install ripgrep
error: `mix` couldn't clean up after an unfinished step

help: run `mix doctor` to see what is left, and `mix repair` to put back what it can

$ mix explain cleanup-incomplete
CLEANUP_INCOMPLETE

`mix` could not clean up after a step that did not finish.

Something `mix` set up for the step could not be removed afterwards.

To fix it:
  - run `mix doctor` to see what is left
  - run `mix repair` to put back what it can
