crates/explain/src/codes/snapshots/mix_explain__codes__tests__COMMAND_FAILED.snap
---
source: crates/explain/src/codes/tests.rs
expression: shown(code)
---
$ mix install ripgrep
error: couldn't install ripgrep

help: run it again with `-v` to see what went wrong

$ mix explain command-failed
COMMAND_FAILED

A program `mix` ran, such as `nix` or `git`, exited with an error.

The program's own output says why, and `mix` keeps it under `Caused by`.

To fix it:
  - run the command again with `-v` to see the program's own output
