crates/explain/src/codes/snapshots/mix_explain__codes__tests__CONFLICT.snap
---
source: crates/explain/src/codes/tests.rs
expression: shown(code)
---
$ mix install ripgrep
error: /etc/nix/nix.conf changed while mix was working, so mix left it alone

help: run `mix install` again to start from what is there now

$ mix explain conflict
CONFLICT

A file or account changed while `mix` was working on it.

`mix` left it as it found it instead of overwriting someone else's change.

To fix it:
  - run the command again to start from what is there now
