crates/explain/src/codes/snapshots/mix_explain__codes__tests__CROSS_DEVICE_STORE.snap
---
source: crates/explain/src/codes/tests.rs
expression: shown(code)
---
$ mix install ripgrep
error: `/nix/store` is on a different disk than `/nix`, and `mix` needs them on the same one

help: remove the separate mount for `/nix/store`, then run `mix install` again

$ mix explain cross-device-store
CROSS_DEVICE_STORE

`/nix/store` is a separate mount from `/nix`.

`mix` moves the runtime into the store by renaming, which cannot cross filesystems.

To fix it:
  - remove the separate mount for `/nix/store`
  - run the command again
