crates/explain/src/codes/snapshots/mix_explain__codes__tests__DECOMPRESSION.snap
---
source: crates/explain/src/codes/tests.rs
expression: shown(code)
---
$ mix install ripgrep
error: the downloaded setup files are damaged

help: run `mix install` again to download them again

$ mix explain decompression
DECOMPRESSION

A downloaded archive could not be unpacked.

It was probably damaged in transit.

To fix it:
  - run the command again to download it again
