crates/explain/src/codes/snapshots/mix_explain__codes__tests__GIT_RECORD_FAILED.snap
---
source: crates/explain/src/codes/tests.rs
expression: shown(code)
---
$ mix install ripgrep
error: the change was made but not recorded in git

help: run `mix repair` to record it

$ mix explain git-record-failed
GIT_RECORD_FAILED

The change was made, but recording it in git failed.

`mix` keeps your package list in a git repository so every change can be seen and undone. Committing fails most often because `git` is missing or the repository belongs to another user.

To fix it:
  - run `mix repair` to record it
