crates/explain/src/codes/snapshots/mix_explain__codes__tests__INTEGRITY.snap
---
source: crates/explain/src/codes/tests.rs
expression: shown(code)
---
$ mix install ripgrep
error: the downloaded setup files are damaged

help: run `mix install` again to download them again

$ mix explain integrity
INTEGRITY

A downloaded file did not match the checksum `mix` has pinned for it.

It was damaged in transit, or the mirror serves the wrong file. It was thrown away unused.

To fix it:
  - run the command again to download it again
