crates/explain/src/codes/snapshots/mix_explain__codes__tests__INTERNAL.snap
---
source: crates/explain/src/codes/tests.rs
expression: shown(code)
---
$ mix install ripgrep
error: something went wrong inside `mix`

help: report this bug at https://github.com/recregt/mix/issues

$ mix explain internal
INTERNAL

Something went wrong inside `mix` itself.

A task panicked, or two parts of `mix` disagreed about the protocol between them. Nothing on your system caused it.

To fix it:
  - report it at https://github.com/recregt/mix/issues with the output of the command run with `-v`
