crates/explain/src/codes/snapshots/mix_explain__codes__tests__INVALID_MIRROR.snap
---
source: crates/explain/src/codes/tests.rs
expression: shown(code)
---
$ mix install ripgrep
error: the mirror settings aren't valid: the mirror must be an http or https URL

help: pass `--mirror` as an http or https URL, and `--mirror-key` as a single <name>:<key> entry

$ mix explain invalid-mirror
INVALID_MIRROR

The mirror settings are not usable.

`--mirror` must be an http or https URL, and `--mirror-key` a single `<name>:<key>` entry.

To fix it:
  - pass the settings in that form
  - run the command again
